--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@
           </div>
         </div>
       </section>
-      <section class="testimonials section">
+      <section class="testimonial-container">
+      <div class="testimonials section">
         <div class="testimonial-title">What Others say about us</div>
         <div class="testimonial-grid">
           <div class="testimonial-card">
@@ -239,7 +240,8 @@
             </div>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
       <section class="newsletter section">
         <div class="newsletter-content">
           <div class="newsletter-image-container">
@@ -259,7 +261,8 @@
           </div>
         </div>
       </section>
-      <section class="footer-container section">
+      <section class="footer-section">
+      <div class="footer-container section">
         <footer class="footer">
           <div class="footer-top">
             <div class="logo-container">
@@ -316,8 +319,10 @@
         <div class="footer-copyright">
           <p>&copy; 2021 Present StudySync. All rights reserved.</p>
         </div>
-      </section>
+      </div>
+    </section>
     </div>
+    <script src="assets/scrollreveal.min.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
